# projects

./: .gitignore  README.md
brisbane-dual-wavelength-spectra/: asd_spectra_summary.m  batch_rm_trunk_edge.m  batch_subtract_ground.m  batch_trunk_dual_intensity.m  dwel-multiscan-trkctr-gold0101-20130803.o659239.1  dwel-multiscan-trkctr-gold0101-20130803.o667702.1  dwel_multi_scan_trkctr_brsibane_gold0101_20130803.sh  rm_trunk_edge.m  run_Script3_Points2DEM.m  subtract_ground.m  trunk_dual_intensity.m
canupo-python-api/python/: CMakeLists.txt  canupo.py  py_canupo.cpp  test_canupo.py
cbl/cbl-calibration/: CBL calibration exploration.docx  CBLCal_ESP.csv  CBLCal_ESP.xlsx  CBL_CAL_DN2_UMB.txt  Cp-vs-rho.tif  Cp.tif  GOLD0101_SingleTree_Final.txt  Pr-rsquare-vs-rho.tif  Pr-vs-model.tif  cbl_cal_analysis.m  cbl_cal_analysis_umb.m  untitled.tif  untitled2.tif  variable-range-power.tif
cbl/spd-conversion/: cblascii2spd.py
data-incubator-public-transit/: .gitignore  README.md
data-incubator-public-transit/ipython/: data_incubator_challenge_q1.ipynb  data_incubator_challenge_q2.ipynb  public_transit_exploration_usa_fig1.ipynb  public_transit_exploration_usa_fig2.ipynb
gap-fraction-rs-vs-evi/results/: evi_gap_fraction_summary_bartlett_tower_2009_pgap_800_scale.txt  evi_gap_fraction_summary_bartlett_tower_2009_pgap_850_scale.txt
landsat-sentinel-comparison/: intersect_landsat_sentinel.pro  intersect_two_img.ipynb  plot_landsat_vs_sentinel.ipynb  subset_image_with_bbox.ipynb
sentinel2/: sen2_meta_reader.ipynb
(+6 files in other folders)
