cmake_minimum_required( VERSION 2.8 )

project( CANUPO_Python_Interface )

if(NOT CMAKE_BUILD_TYPE)
 set(CMAKE_BUILD_TYPE "DEBUG")
endif()

# Find necessary packages
# find_package( PythonLibs 2.7 REQUIRED)
# include_directories( ${PYTHON_INCLUDE_DIRS} )
include_directories( "$ENV{HOME}/anaconda_envs/zhanli_py27/include/python2.7" )

find_package( Boost COMPONENTS python REQUIRED )
if(Boost_FOUND)
  include_directories( ${Boost_INCLUDE_DIR} )
elseif(NOT Boost_FOUND)
  message(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
endif()

# Build the wrapper library
# add_definitions("-std=c++11 -std=gnu++11")
add_library( canupo SHARED py_canupo.cpp )
target_link_libraries( canupo ${Boost_LIBRARIES} )

# don't prepend wrapper library name with lib
set_target_properties( canupo PROPERTIES PREFIX "" )

